syntax = "proto3";
import "common.proto";
option java_outer_classname = "MsgTest";
option java_package = "cn.wjybxx.common.temp";
option optimize_for = SPEED;

//@RpcService{id: 1}
service SearchService {
  //@RpcMethod {id: 1}
  rpc Search(SearchRequest) returns (SearchResponse);

  //@RpcMethod {id: 2, mode: 2}
  //@Sparam {interval: 500}
  rpc SearchAsync(SearchRequest) returns (SearchResponse);

  // 以下两种形式不符合proto的rpc语法，但符合我们的约定
  //@RpcMethod {id: 3, mode: 1}
  rpc Search3(SearchRequest request) returns (SearchResponse);
  //@RpcMethod {id: 4, mode: 1}
  rpc Search4() returns ();
}

enum Corpus {
  CORPUS_UNSPECIFIED = 0;
  CORPUS_UNIVERSAL = 1;
  CORPUS_WEB = 2;
  CORPUS_IMAGES = 3;
  CORPUS_LOCAL = 4;
  CORPUS_NEWS = 5;
  CORPUS_PRODUCTS = 6;
  CORPUS_VIDEO = 7;
}

message SearchRequest {
  string query = 1;
  int32 page_number = 2;
  int32 results_per_page = 3;
  Corpus corpus = 4;
  BoxInt32 tag = 5;
}

message SearchResponse {
  repeated Result results = 1;
}

message Result {
  string url = 1;
  string title = 2;
  repeated string snippets = 3;
}

message Outer {// Level 0
  message MiddleAA {// Level 1
    message Inner {// Level 2
      int64 ival = 1;
      bool  booly = 2;
    }
  }
  message MiddleBB {// Level 1
    message Inner {// Level 2
      int32 ival = 1;
      bool  booly = 2;
    }
  }
  MiddleAA aa = 1;
  MiddleBB bb = 2;
  map<int32, int32> pairs = 3;
}

enum EnumAllowingAlias {
  option allow_alias = true;
  EAA_UNSPECIFIED = 0;
  EAA_STARTED = 1;
  EAA_RUNNING = 1;
  EAA_FINISHED = 2;
}

enum EnumNotAllowingAlias {
  ENAA_UNSPECIFIED = 0;
  ENAA_STARTED = 1;
  // ENAA_RUNNING = 1;  // Uncommenting this line will cause a warning message.
  ENAA_FINISHED = 2;
}